fix: sonarqube issues - complexity + constructor + tests